# Moving_Tracking_Camera

./: .gitignore  README.md  notes_performance.txt
companion/: companion.py  companion_Ella.py  requirements.txt
microproccesor/: python_test.py  test_comm.ino  turning-servor-uart.ino
raspi/: CMakeLists.txt  install-opencv.sh  installOCV.sh  main.cpp  main.py  main_with_performance.py  performance_logs.txt  python_test.py  requirements.txt  test.py
